--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Lockdown</string>
+    <string name="app_name">Covid19_lockdown</string>
     <string name="facebook_app_id">@string/FB_KEY</string>
 	<string name="google_map_key">@string/GOOGLE_MAPS_KEY</string>
 </resources>
